--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,23 +1,5 @@
-<h1>My Song</h1>
 
 <h1><%= @song.name %></h1>
 
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @song.name %>
-</p>
-
-<p>
-  <strong>Artist:</strong>
-  <%= @song.artist_id %>
-</p>
-
-<p>
-  <strong>Genre:</strong>
-  <%= @song.genre_id %>
-</p>
-
-<%= link_to 'Edit', edit_song_path(@song) %> |
-<%= link_to 'Back', songs_path %>
+<%= (link_to @song.artist.name, artist_path(@song.artist)) if @song.artist %> 
+<%= (link_to @song.genre.name, genre_path(@song.genre)) if @song.genre %>
